# transofrmers

./: CLAUDE.md  main.py  pyproject.toml
notebooks/: reshape.ipynb  tokenizer.ipynb
src/tr/bert/: embedding.py  full.py  self_attetion.py
src/transofrmers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
