[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transofrmers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
